[package]
name = "stopwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 0
debug = false
lto = true

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
